<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="10dp">
    <TextView
        android:id="@+id/tvInput2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#ffe5ec"
        android:gravity="center"
        android:text="{       Calculator        {"
        android:textColor="#f88dad"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="10sp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/kitty" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvInput"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:gravity="bottom|end"
                android:textSize="32sp"
                android:padding="36dp"
                android:textColor="@color/white"
                android:background="#ff8fab"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSeven"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:onClick="onDigit"
                    android:text="@string/_1" />

                <Button
                    android:id="@+id/btnEight"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:onClick="onDigit"
                    android:text="@string/_8" />

                <Button
                    android:id="@+id/btnNine"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:onClick="onDigit"
                    android:text="@string/_9" />

                <Button
                    android:id="@+id/btnDivide"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:onClick="onOperator"
                    android:text="@string/_divide" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnFour"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:onClick="onDigit"
                    android:text="@string/_4" />

                <Button
                    android:id="@+id/btnFive"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:onClick="onDigit"
                    android:text="@string/_5" />

                <Button
                    android:id="@+id/btnSix"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:onClick="onDigit"
                    android:text="@string/_6" />

                <Button
                    android:id="@+id/btnMultiply"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:onClick="onOperator"
                    android:text="@string/Multiply" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnOne"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:onClick="onDigit"
                    android:text="1" />

                <Button
                    android:id="@+id/btnTwo"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:onClick="onDigit"
                    android:text="@string/_2" />

                <Button
                    android:id="@+id/btnThree"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:onClick="onDigit"
                    android:text="@string/_3" />

                <Button
                    android:id="@+id/btnMinus"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:onClick="onOperator"
                    android:text="@string/_Minus" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnZero"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="2"
                    android:onClick="onDigit"
                    android:text="@string/_0" />

                <Button
                    android:id="@+id/btnDot"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:onClick="onDecimalPoint"
                    android:text="@string/_Dot" />

                <Button
                    android:id="@+id/btnCLR"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:onClick="onClear"
                    android:text="@string/_c" />

                <Button
                    android:id="@+id/btnPlus"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:onClick="onOperator"
                    android:text="@string/_plus" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnEqual"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:onClick="onEqual"
                    android:text="@string/_Equal" />

            </LinearLayout><![CDATA[

















            48sp"
                    droid:padding00"
                    an android:textty="end|bottom"
                    android:gravi="10dp"
                   android:text="@string/calc_text" />








        ]]>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
